--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Flexxbuy\\.virtualenvs\\TaskBuddy-geqV0dYw\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\Flexxbuy\\.virtualenvs\\TaskBuddy-geqV0dYw\\Scripts\\python.exe",
 }
