Added calendar date selection

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "auth": {
-        "username": "danw",
-        "token": "562b762e42c6b8b09858d228f94e3a03"
+        "username": "applicationsupport",
+        "token": "b36f9c859a2f5f0a5052597344869670"
     },
     "users": {
         "1332205": {
