Fixed edit task issue with combobox

--- a/config.json
+++ b/config.json
@@ -43,6 +43,6 @@
         "Pre Approved Offers": null,
         "Reminder Text": null,
         "Email 1": null,
-        "Final Email": null
+        "Final": null
     }
 }
